testsuite/bsc.typechecker/instances/order/FdStability.bs.bsc-out.expected
checking package dependencies
compiling FdStability.bs
Error: "FdStability.bs", line 50, column 26: (T0031)
  The contexts for this expression could not be resolved because there are no
  instances of the form:
    FdStability.TC2 Prelude.Bool 5
